# src/controllers/game.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Get, Path, Route, Tags } from "tsoa";
+import { Body, Controller, Get, Path, Post, Route, Tags } from "tsoa";
 import { GameDTO } from "../dto/game.dto";
 import { gameService } from "../services/game.service";
 
@@ -15,5 +15,13 @@ export class GameController extends Controller {
     @Path() id : number
   ): Promise<GameDTO | null> {
     return gameService.getGameById(id);
+  }
+
+  @Post("/")
+  public async createGame(
+    @Body() requestBody : GameDTO
+  ): Promise<GameDTO | null> {
+    const { title, console_id } = requestBody;
+    return gameService.createGame(console_id, title)
   }
 }
